// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render banner alert with correct css 1`] = `
.emotion-3 {
  border: 1px solid;
  border-radius: 2px;
  margin-bottom: 8px;
  border-color: #f4b1b0;
  background-color: #f2dede;
  color: #862422;
  display: block;
}

.emotion-3:empty {
  display: none;
}

.emotion-3 a,
.emotion-3 .button-link {
  border-color: #236a97;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-width: 1080px;
  max-width: 1320px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 20px;
  padding-right: 20px;
  box-sizing: border-box;
}

.emotion-0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: calc(2 * 8px);
  border-right: none;
  border-color: #f4b1b0;
}

.emotion-1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow: auto;
  text-align: left;
  padding: 8px calc(2 * 8px);
}

<div
  class="alert alert-test emotion-3"
  id="error-message"
  role="alert"
>
  <div
    class="emotion-2"
  >
    <div
      aria-label="alert.tooltip.error"
      class="emotion-0"
    >
      <svg
        height="16"
        space="preserve"
        style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:1.41421"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
        xlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M11.402 10.018q0-0.232-0.17-0.402l-1.616-1.616 1.616-1.616q0.17-0.17 0.17-0.402 0-0.241-0.17-0.411l-0.804-0.804q-0.17-0.17-0.411-0.17-0.232 0-0.402 0.17l-1.616 1.616-1.616-1.616q-0.17-0.17-0.402-0.17-0.241 0-0.411 0.17l-0.804 0.804q-0.17 0.17-0.17 0.411 0 0.232 0.17 0.402l1.616 1.616-1.616 1.616q-0.17 0.17-0.17 0.402 0 0.241 0.17 0.411l0.804 0.804q0.17 0.17 0.411 0.17 0.232 0 0.402-0.17l1.616-1.616 1.616 1.616q0.17 0.17 0.402 0.17 0.241 0 0.411-0.17l0.804-0.804q0.17-0.17 0.17-0.411zM14.857 8q0 1.866-0.92 3.442t-2.496 2.496-3.442 0.92-3.442-0.92-2.496-2.496-0.92-3.442 0.92-3.442 2.496-2.496 3.442-0.92 3.442 0.92 2.496 2.496 0.92 3.442z"
          style="fill:#a4030f"
        />
      </svg>
    </div>
    <div
      class="alert-content emotion-1"
    >
      This is an error!
    </div>
  </div>
</div>
`;

exports[`should render properly 1`] = `
<Styled(div)
  className="alert alert-test"
  id="error-message"
  isInline={false}
  role="alert"
  variantInfo={
    Object {
      "backGroundColor": "#f2dede",
      "borderColor": "#f4b1b0",
      "color": "#862422",
      "icon": <AlertErrorIcon
        fill="#a4030f"
      />,
    }
  }
>
  <Styled(div)
    isBanner={false}
  >
    <Styled(div)
      aria-label="alert.tooltip.error"
      isBanner={false}
      variantInfo={
        Object {
          "backGroundColor": "#f2dede",
          "borderColor": "#f4b1b0",
          "color": "#862422",
          "icon": <AlertErrorIcon
            fill="#a4030f"
          />,
        }
      }
    >
      <AlertErrorIcon
        fill="#a4030f"
      />
    </Styled(div)>
    <Styled(div)
      className="alert-content"
    >
      This is an error!
    </Styled(div)>
  </Styled(div)>
</Styled(div)>
`;

exports[`verification of all variants of alert 1`] = `
Object {
  "backGroundColor": "#f2dede",
  "borderColor": "#f4b1b0",
  "color": "#862422",
  "icon": <AlertErrorIcon
    fill="#a4030f"
  />,
}
`;

exports[`verification of all variants of alert 2`] = `
Object {
  "backGroundColor": "#fcf8e3",
  "borderColor": "#faebcc",
  "color": "#6f4f17",
  "icon": <AlertWarnIcon
    fill="#db781a"
  />,
}
`;

exports[`verification of all variants of alert 3`] = `
Object {
  "backGroundColor": "#dff0d8",
  "borderColor": "#d6e9c6",
  "color": "#215821",
  "icon": <AlertSuccessIcon
    fill="#6d9867"
  />,
}
`;

exports[`verification of all variants of alert 4`] = `
Object {
  "backGroundColor": "#d9edf7",
  "borderColor": "#b1dff3",
  "color": "#0e516f",
  "icon": <InfoIcon
    fill="#0271b9"
  />,
}
`;

exports[`verification of all variants of alert 5`] = `
Object {
  "backGroundColor": "#d9edf7",
  "borderColor": "#b1dff3",
  "color": "#0e516f",
  "icon": <DeferredSpinner
    timeout={0}
  />,
}
`;
